fix: fix z-index on audio player waveform

--- a/src/styles/AudioPlayer.module.css
+++ b/src/styles/AudioPlayer.module.css
@@ -6,11 +6,11 @@
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
-  z-index: 3;
 }
 
 .WaveForm {
   flex-basis: 90%;
+  z-index: 1;
 }
 
 .WaveForm:hover {
